Modified stage direction

--- a/mn/mn_de.tex
+++ b/mn/mn_de.tex
@@ -2079,8 +2079,7 @@ Alles geht in Aufregung auseinander; lustiger Tumult der Lehrbuben, welche sich 
 
 \scene
 
-%% TODO This
-\StageDir{Die Bühne stellt im Vordergrund eine Strasse im Längendurchschnitt dar, welche in der Mitte von einer schmalen Gasse, nach dem Hintergrunde zu krumm abbiegend, durchschnitten wird, so dass sich in Front zwei Eckhäuser darbieten, von denen das eine reichere - rechts - das Haus Pogners, das andere einfachere - links - das des Hans Sachs ist. - Vor Pogners Haus eine Linde; vor dem Sachsens ein Fliederbaum. Heiterer Sommerabend, im Verlaufe der ersten Auftritte allmählich einbrechende Nacht. David ist darüber her, die Fensterläden nach der Gasse zu von aussen zu schliessen. Andere Lehrbuben tun das gleiche bei anderen Häusern.}
+\StageDir{Die Bühne stellt im Vordergrund eine Strasse im Längendurchschnitt dar, welche in der Mitte von einer schmalen Gasse, nach dem Hintergrunde zu krumm abbiegend, durchschnitten wird, so dass sich in Front zwei Eckhäuser darbieten, von denen das eine reichere, rechts, das Haus Pogners, das andere einfachere. Links, das des Hans \Sachs ist. Vor Pogners Haus eine Linde; vor dem Sachsens ein Fliederbaum. Heiterer Sommerabend, im Verlaufe der ersten Auftritte allmählich einbrechende Nacht. David ist darüber her, die Fensterläden nach der Gasse zu von aussen zu schliessen. Andere Lehrbuben tun das gleiche bei anderen Häusern.}
 
 \speaker{Lehrbuben}
 
