--- a/mn/mn_de.tex
+++ b/mn/mn_de.tex
@@ -4315,21 +4315,24 @@ Lobet Gott, den Herrn!
 
 \scene
 
-\StageDir{In Sachs' Werkstatt. Kurzer Raum. Im Hintergrund die halb geöffnete Ladentür, nach der Strasse führend. Rechts zur Seite eine Kammertür. Links das nach der Gasse gehende Fenster, mit Blumenstöcken davor, zur Seite ein Werktisch. \Sachs sitzt auf einem grossen Lehnstuhle an diesem Fenster, durch welches die Morgensonne hell auf ihn hereinscheint: Er hat vor sich auf dem Schosse einen grossen Folianten und ist im Lesen vertieft. \David zeigt sich, von der Strasse kommend, unter der Ladentür, er lugt herein, und da er \Sachs gewahrt, fährt er zurück. Er versichert sich aber, dass \Sachs ihn nicht bemerkt, schlüpft herein, stellt seinen mitgebrachten Korb auf den hinteren Werktisch beim Laden und untersucht seinen Inhalt: er holt Blumen und Bänder und kramt sie auf dem Tische aus, endlich findet er auf dem Grunde eine Wurst und einen Kuchen und lässt sich sogleich an, diese zu verzehren, als Sachs, der ihn fortwährend nicht beachtet, mit starkem Geräusch eines der grossen Blätter des Folianten umwendet.}
+\StageDir{In Sachs' Werkstatt. Kurzer Raum. Im Hintergrund die halb geöffnete Ladentür, nach der Strasse führend. Rechts zur Seite eine Kammertür. Links das nach der Gasse gehende Fenster, mit Blumenstöcken davor, zur Seite ein Werktisch. \Sachs sitzt auf einem grossen Lehnstuhle an diesem Fenster, durch welches die Morgensonne hell auf ihn hereinscheint: Er hat vor sich auf dem Schosse einen grossen Folianten und ist im Lesen vertieft. \David zeigt sich, von der Strasse kommend, unter der Ladentür, er lugt herein, und da er \Sachs gewahrt, fährt er zurück. Er versichert sich aber, dass \Sachs ihn nicht bemerkt, schlüpft herein, stellt seinen mitgebrachten Korb auf den hinteren Werktisch beim Laden und untersucht seinen Inhalt: er holt Blumen und Bänder und kramt sie auf dem Tische aus, endlich findet er auf dem Grunde eine Wurst und einen Kuchen und lässt sich sogleich an, diese zu verzehren, als \Sachs, der ihn fortwährend nicht beachtet, mit starkem Geräusch eines der grossen Blätter des Folianten umwendet.}
 
 \Davidspeaks
 
-%% START HERE
+\direct{fährt zusammen, verbirgt das Essen und wendet sich zurück}
 
-\direct{fährt zusammen, verbirgt das Essen und wendet sich zurückGleich, Meister! Hier!}
-
+Gleich, Meister! Hier!
 Die Schuh' sind abgegeben
 in Herrn Beckmessers Quartier.
 Mir war's, als rieft Ihr mich eben?
-beiseite
+
+\direct{beiseite}
+
 Er tut, als säh' er mich nicht?
-Da ist er bös', wenn er nicht spricht! -
-Er nähert sich sehr demütig langsam Sachs
+Da ist er bös', wenn er nicht spricht!
+
+\direct{Er nähert sich sehr demütig langsam Sachs}
+
 Ach, Meister, wollt mir verzeih'n!
 Kann ein Lehrbub' vollkommen sein?
 Kenntet Ihr die Lene wie ich,
@@ -4350,65 +4353,94 @@ Wie käm' nun da was Grosses drauf an?
 Auch hat's uns'rer Liebe gar wohl getan.
 Die Lene hat mir eben alles erklärt
 und zum Fest Blumen und Bänder beschert.
-Er bricht in grössere Angst aus
+
+\direct{Er bricht in grössere Angst aus}
+
 Ach, Meister, sprecht doch nur ein Wort!
-beiseite
+
+\direct{beiseite}
+
 Hätt' ich nur die Wurst und den Kuchen erst fort!
 
 \Sachsspeaks
-hat unbeirrt immer weitergelesen. Jetzt schlägt er den Folianten zu. Von dem Geräusch erschrickt David so, dass er strauchelt und unwillkürlich vor Sachs auf die Knie fällt. Sachs sieht über das Buch, das er noch auf dem Schosse behält, hinweg, über David, welcher immer auf den Knien furchtsam nach ihm aufblickt, hin und heftet seinen Blick unwillkürlich auf den hinteren Werktisch. Sehr leise
+
+\direct{hat unbeirrt immer weitergelesen. Jetzt schlägt er den Folianten zu. Von dem Geräusch erschrickt David so, dass er strauchelt und unwillkürlich vor Sachs auf die Knie fällt. Sachs sieht über das Buch, das er noch auf dem Schosse behält, hinweg, über David, welcher immer auf den Knien furchtsam nach ihm aufblickt, hin und heftet seinen Blick unwillkürlich auf den hinteren Werktisch. Sehr leise}
+
 Blumen und Bänder seh' ich dort!
 Schaut hold und jugendlich aus!
 Wie kamen mir die ins Haus?
 
 \Davidspeaks
-verwundert über Sachs' Freundlichkeit
+
+\direct{verwundert über Sachs' Freundlichkeit}
+
 Ei, Meister! 's ist heut festlicher Tag;
 da putzt sich jeder, so schön er mag.
 
 \Sachsspeaks
-immer leise, wie für sich
+
+\direct{immer leise, wie für sich}
+
 Wär' heut Hochzeitsfest?
 
 \Davidspeaks
 Ja, käm's erst so weit, dass David die Lene freit!
 
 \Sachsspeaks
-immer wie zuvor
+
+\direct{immer wie zuvor}
+
 's war Polterabend, dünkt mich doch?
 
 \Davidspeaks
-für sich
-Polterabend? - Da krieg' ich's wohl noch?
-laut
-Verzeiht das, Meister! Ich bitt', vergesst! Wir feiern ja heut' Johannisfest.
+
+\direct{für sich}
+
+Polterabend? Da krieg' ich's wohl noch?
+
+\direct{laut}
+
+Verzeiht das, Meister! Ich bitt', vergesst!
+Wir feiern ja heut' Johannisfest.
 
 \Sachsspeaks
 Johannisfest?
 
 \Davidspeaks
-beiseite
+
+\direct{beiseite}
+
 Hört er heut' schwer?
 
 \Sachsspeaks
 Kannst du dein Sprüchlein? Sag es her!
 
 \Davidspeaks
-ist allmählich zu stehen gekommen
+
+\direct{ist allmählich zu stehen gekommen}
+
 Mein Sprüchlein? Denk', ich kann es gut.
-beiseite
+
+\direct{beiseite}
+
 's setzt nichts! Der Meister ist wohlgemut! -
-stark und grob
-"Am Jordan Sankt Johannes stand« -
+
+\direct{stark und grob}
+
+``Am Jordan Sankt Johannes stand!''
 
 \Sachsspeaks
-Wa - was?
+Wa---was?
 
 \Davidspeaks
-lächelnd
+
+\direct{lächelnd}
+
 Verzeiht, das Gewirr! Mich machte der Polterabend irr.
-Er sammelt sich und stellt sich gehörig auf
-"Am Jordan Sankt Johannes stand,
+
+\direct{Er sammelt sich und stellt sich gehörig auf}
+
+``Am Jordan Sankt Johannes stand,
 all' Volk der Welt zu taufen;
 kam auch ein Weib aus fernem Land,
 von Nürnberg gar gelaufen;
@@ -4419,20 +4451,26 @@ nach Nürnberg wieder kamen,
 in deutschem Land gar bald sich fand's,
 dass wer am Ufer des Jordans
 Johannes war genannt,
-an der Pegnitz hiess der Hans.«
-sich besinnend
+an der Pegnitz hiess der Hans.''
+
+\direct{sich besinnend}
+
 Hans? Hans!
 Herr! Meister!
-feurig
-s ist heut Eu'r Namenstag!
+
+\direct{feurig}
+
+'s ist heut Eu'r Namenstag!
 Nein! Wie man so was vergessen mag!
 Hier! Hier, die Blumen sind für Euch,
-die Bänder - und was nur alles noch gleich?
+die Bänder, und was nur alles noch gleich?
 Ja, hier schaut! Meister, herrlicher Kuchen!
 Möchtet Ihr nicht auch die Wurst versuchen?
 
 \Sachsspeaks
-immer ruhig, ohne seine Stellung zu verändern
+
+\direct{immer ruhig, ohne seine Stellung zu verändern}
+
 Schön Dank, mein Jung', behalt's für dich!
 Doch heut auf die Wiese begleitest du mich.
 Mit Blumen und Bändern putz' dich fein;
@@ -4463,18 +4501,24 @@ den Beckmesser, denk' ich, sängt Ihr doch nieder?
 Ich mein', dass der heut' sich nicht wichtig macht.
 
 \Sachsspeaks
-Wohl möglich! Hab mir's auch schon bedacht. -
+Wohl möglich! Hab mir's auch schon bedacht.
 Jetzt geh' und stör' mir den Junker nicht!
 Komm wieder, wenn du schön gericht't.
 
 \Davidspeaks
-küsst Sachs gerührt die Hand
+
+\direct{küsst Sachs gerührt die Hand}
+
 So war er noch nie, wenn sonst auch gut!
 Kann mir gar nicht mehr denken, wie der Knieriemen tut!
-Er packt alles zusammen und geht in die Kammer ab
+
+\direct{Er packt alles zusammen und geht in die Kammer ab}
+
 
 \Sachsspeaks
-immer noch den Folianten auf dem Schosse, lehnt sich, mit untergestütztem Arme, sinnend darauf; es scheint, dass ihn das Gespräch mit David gar nicht aus seinem Nachdenken gestört hat
+
+\direct{immer noch den Folianten auf dem Schosse, lehnt sich, mit untergestütztem Arme, sinnend darauf; es scheint, dass ihn das Gespräch mit David gar nicht aus seinem Nachdenken gestört hat}
+
 Wahn! Wahn! Überall Wahn!
 Wohin ich forschend blick'
 in Stadt- und Weltchronik,
@@ -4488,7 +4532,9 @@ Hört nicht sein eigen Schmerzgekreisch,
 wenn er sich wühlt ins eig'ne Fleisch,
 wähnt Lust sich zu erzeigen.
 Wer gibt den Namen an?
-kräftig
+
+\direct{kräftig}
+
 's ist halt der alte Wahn,
 ohn' den nichts mag geschehen,
 's mag gehen oder stehen!
@@ -4500,7 +4546,9 @@ Wie friedsam treuer Sitten
 getrost in Tat und Werk,
 liegt nicht in Deutschlands Mitten
 mein liebes Nürenberg!
-Er blickt mit freudiger Begeisterung ruhig vor sich hin
+
+\direct{Er blickt mit freudiger Begeisterung ruhig vor sich hin}
+
 Doch eines Abends spat,
 ein Unglück zu verhüten,
 bei jugendheissen Gemüten,
@@ -4515,13 +4563,13 @@ und will's der Wahn gesegnen,
 nun muss es Prügel regnen,
 mit Hieben, Stoss' und Dreschen
 den Wutesbrand zu löschen.
-Gott weiss, wie das geschah? -
+Gott weiss, wie das geschah?
 Ein Kobold half wohl da!
 Ein Glühwurm fand sein Weibchen nicht;
 der hat den Schaden angericht't.
 Der Flieder war's:
-Johannisnacht. -
-Nun aber kam Johannistag! -
+Johannisnacht.
+Nun aber kam Johannistag!
 Jetzt schau'n wir, wie Hans Sachs es macht,
 dass er den Wahn fein lenken kann,
 ein edler' Werk zu tun.
@@ -4534,21 +4582,25 @@ und nie ohn' ein'gen Wahn gelingen.
 
 \scene
 
-Walther tritt unter der Kammertür ein. Er bleibt einen Augenblick dort stehen und blickt auf Sachs. Dieser wendet sich und lässt den Folianten auf den Boden gleiten
+\StageDir{Walther tritt unter der Kammertür ein. Er bleibt einen Augenblick dort stehen und blickt auf Sachs. Dieser wendet sich und lässt den Folianten auf den Boden gleiten.}
 
 \Sachsspeaks
 Grüss Gott, mein Junker! Ruhtet Ihr noch?
 Ihr wachtet lang: nun schlieft Ihr doch?
 
 \Waltherspeaks
-sehr ruhig
+
+\direct{sehr ruhig}
+
 Ein wenig, aber fest und gut.
 
 \Sachsspeaks
 So ist Euch nun wohl bass zumut?
 
 \Waltherspeaks
-immer sehr ruhig
+
+\direct{immer sehr ruhig}
+
 Ich hatt' einen wunderschönen Traum.
 
 \Sachsspeaks
@@ -4569,7 +4621,9 @@ Was gilt's, es gab der Traum Euch ein,
 wie heut' Ihr sollet Meister sein?
 
 \Waltherspeaks
-sehr ruhig
+
+\direct{sehr ruhig}
+
 Nein, von der Zunft und ihren Meistern
 wollt' sich mein Traumbild nicht begeistern.
 
@@ -4578,7 +4632,9 @@ Doch lehrt' es wohl den Zauberspruch,
 mit dem Ihr sie gewännet?
 
 \Waltherspeaks
-etwas lebhafter
+
+\direct{etwas lebhafter}
+
 Wie wähnt Ihr doch nach solchem Bruch,
 wenn Ihr noch Hoffnung kennet!
 
@@ -4602,14 +4658,18 @@ doch für liebseligen Ehestand
 man andre Wort' und Weisen fand.
 
 \Waltherspeaks
-lächelnd
+
+\direct{lächelnd}
+
 Die kenn' ich nun auch seit dieser Nacht:
 es hat viel Lärm auf der Gasse gemacht.
 
 \Sachsspeaks
-lachend
+
+\direct{lachend}
+
 Ja, ja! Schon gut! Den Takt dazu
-hörtet Ihr auch! - Doch, lasst dem Ruh'
+hörtet Ihr auch! Doch, lasst dem Ruh'
 und folgt meinem Rate, kurz und gut,
 fasst zu einem Meisterliede Mut.
 
@@ -4618,7 +4678,9 @@ Ein schönes Lied, ein Meisterlied,
 wie fass ich da den Unterschied?
 
 \Sachsspeaks
-zart
+
+\direct{zart}
+
 Mein Freund! In holder Jugendzeit,
 wenn uns von mächt'gen Trieben
 zum sel'gen ersten Lieben
@@ -4721,16 +4783,16 @@ Damit man seh',
 Ihr wähltet Euch gleich ein Weib zur Eh'.
 
 \Waltherspeaks
-"Wonnig entragend dem seligen Raum
+``Wonnig entragend dem seligen Raum
 bot goldner Frucht heilsaft'ge Wucht
 mit holdem Prangen dem Verlangen
-an duft'ger Zweige Saum herrlich ein Baum.«
+an duft'ger Zweige Saum herrlich ein Baum.''
 
 \Sachsspeaks
 Ihr schlosset nicht im gleichen Ton.
 Das macht den Meistern Pein;
 doch nimmt Hans Sachs die Lehr' davon,
-im Lenz wohl müss' es so sein. -
+im Lenz wohl müss' es so sein.
 Nun stellt mir einen Abgesang.
 
 \Waltherspeaks
@@ -4748,7 +4810,7 @@ und Euren Stollen gibt's den Schluss,
 dass nichts davon abfallen muss.
 
 \Waltherspeaks
-"Sei Euch vertraut,
+``Sei Euch vertraut,
 welch hehres Wunder mir gescheh'n:
 an meiner Seite stand ein Weib,
 so hold und schön ich nie geseh'n;
@@ -4758,23 +4820,25 @@ mit Augen winkend,
 die Hand wies blinkend,
 was ich verlangend begehrt,
 die Frucht so hold und wert
-vom Lebensbaum.«
+vom Lebensbaum.''
 
 \Sachsspeaks
-gerührt
+
+\direct{gerührt}
+
 Das nenn' ich mir einen Abgesang!
 Seht, wie der ganze Bar gelang.
 Nur mit der Melodei seid Ihr ein wenig frei;
 doch sag' ich nicht, dass das ein Fehler sei;
 nur ist's nicht leicht zu behalten,
-und das ärgert uns're Alten! -
+und das ärgert uns're Alten!
 Jetzt richtet mir noch einen zweiten Bar,
 damit man merk', welch' der erste war.
 Auch weiss ich noch nicht, so gut Ihr's gereimt,
 was Ihr gedichtet, was Ihr geträumt.
 
 \Waltherspeaks
-"Abendlich glühend in himmlischer Pracht
+``Abendlich glühend in himmlischer Pracht
 verschied der Tag, wie dort ich lag;
 aus ihren Augen Wonne zu saugen,
 Verlangen einz'ger Macht in mir nur wacht'.
@@ -4790,10 +4854,12 @@ leuchtend und hell, wie strahlten die Sterne da schön;
 zu Tanz und Reigen in Laub und Zweigen
 der gold'nen sammeln sich mehr,
 statt Frucht ein Sternenheer
-im Lorbeerbaum.« -
+im Lorbeerbaum.''
 
 \Sachsspeaks
-sehr gerührt
+
+\direct{sehr gerührt}
+
 Freund!
 Euer Traumbild wies Euch wahr;
 gelungen ist auch der zweite Bar.
@@ -4801,11 +4867,15 @@ Wolltet Ihr noch einen dritten dichten?
 Des Traumes Deutung würd' er berichten.
 
 \Waltherspeaks
-steht schnell auf
+
+\direct{steht schnell auf}
+
 Wo fänd' ich die? Genug der Wort'!
 
 \Sachsspeaks
-erhebt sich gleichfalls und tritt mit freundlicher Entschiedenheit zu Walther
+
+\direct{erhebt sich gleichfalls und tritt mit freundlicher Entschiedenheit zu Walther}
+
 Dann Tat und Wort am rechten Ort!
 Drum bitt' ich, merkt mir wohl die Weise:
 gar lieblich drin sich's dichten lässt:
@@ -4829,20 +4899,24 @@ sollen beide wir gezieret sein,
 wenn's Stattliches zu wagen gilt.
 Drum kommt, seid Ihr gleich mir gesinnt.
 
-Walther schlägt in Sachsens Hand ein; so geleitet ihn dieser ruhig festen Schrittes zur Kammer, deren Tür er ihm ehrerbietig öffnet und dann ihm folgt
+\StageDir{Walther schlägt in Sachsens Hand ein; so geleitet ihn dieser ruhig festen Schrittes zur Kammer, deren Tür er ihm ehrerbietig öffnet und dann ihm folgt.}
 
 
 \scene
 
-Beckmesser. Sachs. Man gewahrt Beckmesser, welcher draussen vor dem Laden erscheint, in grosser Aufregung hereinlugt und, da er die Werkstatt leer findet, hastig eintritt Er ist reich aufgeputzt, aber in sehr leidendem Zustande. Er blickt sich erst unter der Tür nochmals genau in der Werkstatt um, dann hinkt er vorwärts, zuckt aber zusammen und streicht sich den Rücken. Er macht wieder einige Schritte, knickt aber mit den Knien und streicht nun diese. Er setzt sich auf den Schusterschemel, fährt aber schnell schmerzhaft wieder auf. Er betrachtet sich den Schemel und gerät dabei in immer aufgeregteres Nachsinnen. Er wird von den verdriesslichsten Erinnerungen und Vorstellungen gepeinigt; immer unruhiger beginnt er sich den Schweiss von der Stirne zu wischen. Er hinkt immer lebhafter umher und starrt dabei vor sich hin. Als ob er von allen Seiten verfolgt wäre, taumelt er fliehend hin und her. Wie um nicht umzusinken, hält er sich an dem Werktisch, zu dem er hin geschwankt war, an und starrt vor sich hin. Matt und verzweiflungsvoll sieht er um sich; sein Blick fällt endlich durch das Fenster auf Pogners Haus; er hinkt mühsam an dasselbe heran, und, nach dem gegenüberliegenden Fenster ausspähend, versucht er, sich in die Brust zu werfen, als ihm sogleich der Ritter Walther einfällt. Ärgerliche Gedanken entstehen dadurch, gegen die er mit schmeichelndem Selbstgefühl anzukämpfen sucht. Die Eifersucht übermannt ihn; er schlägt sich vor den Kopf. Er glaubt die Verhöhnung der Weiber und Buben auf der Gasse zu vernehmen, wendet sich wütend ab und schmeisst das Fenster zu. Sehr verstört wendet er sich mechanisch wieder dem Werktische zu, indem er vor sich hinbrütend nach einer neuen Weise zu suchen scheint. Sein Blick fällt auf das von Sachs zuvor beschriebene Papier; er nimmt es neugierig auf, überfliegt es mit wachsender Aufregung und bricht endlich wütend aus
+\StageDir{\Beckmesser. \Sachs. Man gewahrt \Beckmesser, welcher draussen vor dem Laden erscheint, in grosser Aufregung hereinlugt und, da er die Werkstatt leer findet, hastig eintritt Er ist reich aufgeputzt, aber in sehr leidendem Zustande. Er blickt sich erst unter der Tür nochmals genau in der Werkstatt um, dann hinkt er vorwärts, zuckt aber zusammen und streicht sich den Rücken. Er macht wieder einige Schritte, knickt aber mit den Knien und streicht nun diese. Er setzt sich auf den Schusterschemel, fährt aber schnell schmerzhaft wieder auf. Er betrachtet sich den Schemel und gerät dabei in immer aufgeregteres Nachsinnen. Er wird von den verdriesslichsten Erinnerungen und Vorstellungen gepeinigt; immer unruhiger beginnt er sich den Schweiss von der Stirne zu wischen. Er hinkt immer lebhafter umher und starrt dabei vor sich hin. Als ob er von allen Seiten verfolgt wäre, taumelt er fliehend hin und her. Wie um nicht umzusinken, hält er sich an dem Werktisch, zu dem er hin geschwankt war, an und starrt vor sich hin. Matt und verzweiflungsvoll sieht er um sich; sein Blick fällt endlich durch das Fenster auf Pogners Haus; er hinkt mühsam an dasselbe heran, und, nach dem gegenüberliegenden Fenster ausspähend, versucht er, sich in die Brust zu werfen, als ihm sogleich der Ritter Walther einfällt. Ärgerliche Gedanken entstehen dadurch, gegen die er mit schmeichelndem Selbstgefühl anzukämpfen sucht. Die Eifersucht übermannt ihn; er schlägt sich vor den Kopf. Er glaubt die Verhöhnung der Weiber und Buben auf der Gasse zu vernehmen, wendet sich wütend ab und schmeisst das Fenster zu. Sehr verstört wendet er sich mechanisch wieder dem Werktische zu, indem er vor sich hinbrütend nach einer neuen Weise zu suchen scheint. Sein Blick fällt auf das von \Sachs zuvor beschriebene Papier; er nimmt es neugierig auf, überfliegt es mit wachsender Aufregung und bricht endlich wütend aus.}
 
 \Beckmesserspeaks
 Ein Werbelied! Von Sachs! Ist's wahr?
 Ha! Jetzt wird mir alles klar!
-Da er die Kammertür gehen hört, fährt er zusammen und steckt das Papier eilig in die Tasche
+
+\direct{Da er die Kammertür gehen hört, fährt er zusammen und steckt das Papier eilig in die Tasche}
+
 
 \Sachsspeaks
-im Festgewande, tritt ein, kommt vor und hält an, als er Beckmesser gewahrt
+
+\direct{im Festgewande, tritt ein, kommt vor und hält an, als er \Beckmesser gewahrt}
+
 Sieh da, Herr Schreiber! Auch am Morgen?
 Euch machen die Schuh' doch nicht mehr Sorgen?
 
@@ -4867,7 +4941,9 @@ Eure Hochzeit spukte unter den Leuten:
 je toller es da hergeh', je besser bekommt's der Eh'.
 
 \Beckmesserspeaks
-wütend
+
+\direct{wütend}
+
 O Schuster, voll von Ränken
 und pöbelhaften Schwänken,
 du warst mein Feind von je:
