Finished more of Meistersinger Act 3

--- a/mn/mn_de.tex
+++ b/mn/mn_de.tex
@@ -4912,7 +4912,6 @@ Ha! Jetzt wird mir alles klar!
 
 \direct{Da er die Kammertür gehen hört, fährt er zusammen und steckt das Papier eilig in die Tasche}
 
-
 \Sachsspeaks
 
 \direct{im Festgewande, tritt ein, kommt vor und hält an, als er \Beckmesser gewahrt}
@@ -4938,7 +4937,8 @@ schuft Ihr gar Aufruhr und Meuterei!
 \Sachsspeaks
 's war Polterabend, lasst Euch bedeuten;
 Eure Hochzeit spukte unter den Leuten:
-je toller es da hergeh', je besser bekommt's der Eh'.
+je toller es da hergeh',
+je besser bekommt's der Eh'.
 
 \Beckmesserspeaks
 
@@ -4966,7 +4966,7 @@ Mit Schreien und mit Klopfen
 wollt' er mein Lied zustopfen,
 dass nicht dem Kind werd' kund,
 wie auch ein and'rer bestund!
-Ja ja! Haha! Hab ich dich da?
+Jaja! Haha! Hab ich dich da?
 Aus seiner Schusterstuben
 hetzt' endlich er den Buben
 mit Knüppeln auf mich her,
@@ -5011,18 +5011,24 @@ Gewisslich, nein!
 
 \Beckmesserspeaks
 Wenn ich aber drob ein Zeugnis hätte?
-Er greift in die Tasche
+
+\direct{Er greift in die Tasche}
+
 
 \Sachsspeaks
-blickt auf den Werktisch
+
+\direct{blickt auf den Werktisch}
+
 Das Gedicht? Hier liess ich's. Stecktet Ihr's ein?
 
 \Beckmesserspeaks
-das Blatt hervorziehend
+
+\direct{das Blatt hervorziehend}
+
 Ist das Eure Hand?
 
 \Sachsspeaks
-Ja - war es das?
+Ja. War es das?
 
 \Beckmesserspeaks
 Ganz frisch noch die Schrift?
@@ -5054,14 +5060,14 @@ der ärgste aller Spitzbuben seid!
 
 \Sachsspeaks
 Mag sein! Doch hab ich noch nie entwandt,
-was ich auf fremden Tischen fand -
+was ich auf fremden Tischen fand;
 und dass man von Euch auch nicht Übles denkt,
 behaltet das Blatt, es sei Euch geschenkt.
 
 \Beckmesserspeaks
 in freudigem Schreck aufspringend
-Herrgott! \ldots 
-Ein Gedicht? \ldots  Ein Gedicht von Sachs!
+Herrgott! 
+Ein Gedicht? Ein Gedicht von Sachs!
 Doch halt, dass kein neuer Schad' mir erwachs'!
 Ihr habt's wohl schon recht gut memoriert?
 
@@ -5090,10 +5096,12 @@ Wenn's nicht zu schwer!
 Und wenn ich gefiel'?
 
 \Sachsspeaks
-Das \ldots  wunderte mich sehr!
+Das wunderte mich sehr!
 
 \Beckmesserspeaks
-ganz zutraulich
+
+\direct{ganz zutraulich}
+
 Da seid Ihr nun wieder zu bescheiden:
 ein Lied von Sachs,
 gleichsam pfeifend
@@ -5101,8 +5109,8 @@ das will was bedeuten!
 Und seht nur, wie mir's ergeht,
 wie's mit mir Ärmsten steht!
 Erseh' ich doch mit Schmerzen,
-das Lied, das nachts ich sang -
-dank Euren lust'gen Scherzen! -
+das Lied, das nachts ich sang---
+dank Euren lust'gen Scherzen!---
 es machte der Pognerin bang'.
 Wie schaff' ich mir nun zur Stelle
 ein neues Lied herzu?
@@ -5118,7 +5126,9 @@ Soll ich das heute haben,
 vergessen, begraben
 sei Zwist, Hader und Streit
 und was uns je entzweit.
-Er blickt seitwärts in das Blatt: plötzlich runzelt sich seine Stirn
+
+\direct{Er blickt seitwärts in das Blatt: plötzlich runzelt sich seine Stirn}
+
 Und doch! Wenn's nur eine Falle wär'?
 Noch gestern wart Ihr mein Feind:
 Wie käm's, dass nach so grosser Beschwer'
@@ -5139,7 +5149,9 @@ Das schwör' ich und gelob' es Euch,
 nie mich zu rühmen, das Lied sei von mir.
 
 \Beckmesserspeaks
-sich vergnügt die Hände reibend
+
+\direct{sich vergnügt die Hände reibend}
+
 Was will ich mehr? Ich bin geborgen!
 Jetzt braucht sich Beckmesser nicht mehr zu sorgen!
 
@@ -5157,7 +5169,7 @@ doch was Ton und Weise betrifft,
 gesteht, da tut mir's keiner vor!
 Drum spitzt nur fein das Ohr.
 Und:
-"Beckmesser, keiner besser!«
+``Beckmesser, keiner besser!''
 darauf macht Euch gefasst,
 wenn Ihr mich ruhig singen lasst.
 Doch nun memorieren,
@@ -5168,7 +5180,9 @@ Hans Sachs, mein Teurer!
 ich hab Euch verkannt;
 durch den Abenteurer
 war ich verrannt:
-sehr zutraulich
+
+\direct{sehr zutraulich}
+
 So einer fehlte uns bloss!
 Den wurden wir Meister doch los!
 Doch mein Besinnen
@@ -5191,10 +5205,12 @@ nicht mit dem Hammerstreich!
 Merker! Merker! Merker Hans Sachs!
 Dass Nürnberg schusterlich blüh' und wachs'!
 
-Beckmesser nimmt tanzend von Sachs Abschied, taumelt und poltert der Ladentür zu; plötzlich glaubt er das Gedicht in seiner Tasche vergessen zu haben, läuft wieder vor, sucht ängstlich auf dem Werktische, bis er es in der eigenen Hand gewahr wird; darüber scherzhaft erfreut, umarmt er Sachs nochmals voll feurigen Dankes und stürzt dann, hinkend und strauchelnd, geräuschvoll durch die Ladentür ab
+\StageDir{\Beckmesser nimmt tanzend von \Sachs Abschied, taumelt und poltert der Ladentür zu; plötzlich glaubt er das Gedicht in seiner Tasche vergessen zu haben, läuft wieder vor, sucht ängstlich auf dem Werktische, bis er es in der eigenen Hand gewahr wird; darüber scherzhaft erfreut, umarmt er \Sachs nochmals voll feurigen Dankes und stürzt dann, hinkend und strauchelnd, geräuschvoll durch die Ladentür ab.}
 
 \Sachsspeaks
-sieht Beckmesser gedankenvoll lächelnd nach
+
+\direct{sieht Beckmesser gedankenvoll lächelnd nach}
+
 So ganz boshaft doch keinen ich fand;
 er hält's auf die Länge nicht aus:
 vergeudet mancher oft viel Verstand,
@@ -5203,13 +5219,15 @@ die schwache Stunde kommt für jeden,
 da wird er dumm und lässt mit sich reden.
 Dass hier Herr Beckmesser ward zum Dieb,
 ist mir für meinen Plan sehr lieb.
-Eva nähert sich auf der Strasse der Ladentür. Sachs wendet sich um und gewahrt Eva
+
+\direct{\Eva nähert sich auf der Strasse der Ladentür. Sachs wendet sich um und gewahrt \Eva}
+
 Sieh, Evchen! Dacht' ich doch, wo sie blieb'!
 
 
 \scene
 
-Eva, reich geschmückt, in glänzender weisser Kleidung, etwas leidend und blass, tritt zum Laden herein und schreitet langsam vor
+\StageDir{\Eva, reich geschmückt, in glänzender weisser Kleidung, etwas leidend und blass, tritt zum Laden herein und schreitet langsam vor.}
 
 \Sachsspeaks
 Grüss Gott, mein Evchen! Ei, wie herrlich
@@ -5232,17 +5250,22 @@ Merk' wohl, ich hatt' zu viel Vertrau'n;
 im Meister hatt' ich mich geirrt.
 
 \Sachsspeaks
-Ei, 's tut mir leid! Zeig' her, mein Kind,
+Ei, 's tut mir leid!
+Zeig' her, mein Kind,
 dass ich dir helfe gleich geschwind.
 
 \Evaspeaks
-Sobald ich stehe, will es geh'n;
-doch will ich geh'n, zwingt's mich zu steh'n.
+Sobald ich stehe,
+will es geh'n;
+doch will ich geh'n,
+zwingt's mich zu steh'n.
 
 \Sachsspeaks
 Hier auf den Schemel streck den Fuss:
 der üblen Not ich wehren muss.
-Sie streckt einen Fuss auf dem Schemel am Werktisch aus.
+
+\direct{Sie streckt einen Fuss auf dem Schemel am Werktisch aus.}
+
 Was ist's mit dem?
 
 \Evaspeaks
@@ -5278,7 +5301,9 @@ wo der Schuh mich drückt?
 \Sachsspeaks
 Ei, 's wundert mich,
 dass er zu weit und doch drückt überall?
-Walther, in glänzender Rittertracht, tritt unter die Tür der Kammer. Eva stösst einen Schrei aus und bleibt, unverwandt auf Walther blickend, in ihrer Stellung, mit dem Fusse auf dem Schemel. Sachs, der vor ihr niedergebückt steht, bleibt mit dem Rücken der Tür zugekehrt, ohne Walthers Eintritt zu beachten. Walther, durch den Anblick Evas festgebannt, bleibt ebenfalls unbeweglich unter der Tür stehen.
+
+\StageDir{Walther, in glänzender Rittertracht, tritt unter die Tür der Kammer. Eva stösst einen Schrei aus und bleibt, unverwandt auf Walther blickend, in ihrer Stellung, mit dem Fusse auf dem Schemel. Sachs, der vor ihr niedergebückt steht, bleibt mit dem Rücken der Tür zugekehrt, ohne Walthers Eintritt zu beachten. Walther, durch den Anblick Evas festgebannt, bleibt ebenfalls unbeweglich unter der Tür stehen.}
+
 Aha! Hier sitzt's! Nun begreif' ich den Fall!
 Kind, du hast recht:
 's stak in der Naht.
@@ -5286,10 +5311,14 @@ Nun warte, dem Übel schaff' ich Rat.
 Bleib nur so steh'n; ich nehm' dir den Schuh
 eine Weil' auf den Leisten:
 dann lässt er dir Ruh'!
-Er hat ihr sanft den Schuh vom Fusse gezogen; während sie in ihrer Stellung verbleibt, macht er sich am Werktisch mit dem Schuh zu schaffen und tut, als beachte er nichts anderes
+
+\direct{Er hat ihr sanft den Schuh vom Fusse gezogen; während sie in ihrer Stellung verbleibt, macht er sich am Werktisch mit dem Schuh zu schaffen und tut, als beachte er nichts anderes.}
+
 
 \Sachsspeaks
-bei der Arbeit
+
+\direct{bei der Arbeit}
+
 Immer schustern, das ist nun mein Los;
 des Nachts, des Tags komm' nicht davon los!
 Kind, hör' zu! Ich hab mir's überdacht,
@@ -5298,62 +5327,70 @@ am besten, ich werbe doch noch um dich;
 da gewänn' ich doch was als Poet für mich!
 Du hörst nicht drauf? - So sprich doch jetzt!
 Hast mir's ja selbst in den Kopf gesetzt.
-Schon gut! - Ich merk':
-"Mach deinen Schuh!«..
+Schon gut! Ich merk':
+``Mach deinen Schuh!''
 Säng' mir nur wenigstens einer dazu!
 Hörte heut' gar ein schönes Lied:
 wem dazu wohl ein dritter Vers geriet?
 
 \Waltherspeaks
-den Blick unverwandt auf Eva geheftet
-"Weilten die Sterne im lieblichen Tanz?
+
+\direct{den Blick unverwandt auf Eva geheftet}
+
+``Weilten die Sterne im lieblichen Tanz?
 So licht und klar im Lockenhaar,
 vor allen Frauen hehr zu schauen,
-lag ihr mit zartem Glanz ein Sternenkranz. -
+lag ihr mit zartem Glanz ein Sternenkranz.''
 
 \Sachsspeaks
-immerfort arbeitend
+
+\direct{immerfort arbeitend}
+
 Lausch, Kind, das ist ein Meisterlied!
 
 \Waltherspeaks
-Wunder ob Wunder nun bieten sich dar:
+``Wunder ob Wunder nun bieten sich dar:
 zwiefachen Tag ich grüssen mag;
 denn gleich zwei'n Sonnen reinster Wonnen
-der hehrsten Augen Paar nahm ich da wahr. -
+der hehrsten Augen Paar nahm ich da wahr.''
 
 \Sachsspeaks
-beiseite zu Eva
+
+\direct{beiseite zu \Eva}
+
 Derlei hörst du jetzt bei mir singen.
 
 \Waltherspeaks
-Huldreichstes Bild,
+``Huldreichstes Bild,
 dem ich zu nahen mich erkühnt:
 den Kranz, von zweier Sonnen Strahl
 zugleich geblichen und ergrünt,
 minnig und mild,
-sie flocht ihn um das Haupt dem Gemahl.
+sie flocht ihn um das Haupt dem Gemahl.''
 
 \Sachsspeaks
-hat den Schuh zurückgebracht und ist jetzt darüber, ihn Eva wieder anzuziehen
+
+\direct{hat den Schuh zurückgebracht und ist jetzt darüber, ihn \Eva wieder anzuziehen}
+
 Nun schau, ob dazu mein Schuh geriet?
 
 \Waltherspeaks
-Dort Huld-geboren, nun Ruhm-erkoren,
+``Dort Huld-geboren, nun Ruhm-erkoren,''
 
 \Sachsspeaks
 Mein' endlich doch,
 es tät' mir gelingen?
 
 \Waltherspeaks
-giesst paradiesische Lust sie in des Dichters Brust
+``giesst paradiesische Lust sie in des Dichters Brust,''
 
 \Sachsspeaks
-Versuch's! Tritt auf! - Sag, drückt er dich noch?
+Versuch's! Tritt auf! Sag, drückt er dich noch?
 
 \Waltherspeaks
-im Liebestraum.«
+``im Liebestraum.''
 
-Eva, die wie bezaubert regungslos gestanden, gesehen und gehört hat, bricht jetzt in heftiges Weinen aus, sinkt Sachs an die Brust und drückt ihn schluchzend an sich. Walther ist zu ihnen getreten; er drückt begeistert Sachs die Hand. Sachs tut sich endlich Gewalt an, reisst sich wie unmutig los und lässt dadurch Eva unwillkürlich an Walthers Schulter sich anlehnen
+\StageDir{\Eva, die wie bezaubert regungslos gestanden, gesehen und gehört hat, bricht jetzt in heftiges Weinen aus, sinkt Sachs an die Brust und drückt ihn schluchzend an sich. \Walther ist zu ihnen getreten; er drückt begeistert \Sachs die Hand. \Sachs tut sich endlich Gewalt an, reisst sich wie unmutig los und lässt dadurch \Eva unwillkürlich an Walthers Schulter sich anlehnen.}
 
 \Sachsspeaks
 Hat man mit dem Schuhwerk nicht seine Not!
@@ -5381,10 +5418,14 @@ der verliert mir allen Respekt;
 die Lene macht' ihn schon nicht recht gescheit,
 dass aus Töpf' und Tellern er leckt!
 Wo Teufel er jetzt nur wieder steckt?
-Er stellt sich, als wolle er nach David sehen
+
+\direct{Er stellt sich, als wolle er nach David sehen}
+
 
 \Evaspeaks
-indem sie Sachs zurückhält und von neuem an sich zieht
+
+\direct{indem sie Sachs zurückhält und von neuem an sich zieht}
+
 O Sachs, mein Freund! Du teurer Mann!
 Wie ich dir Edlem lohnen kann?
 Was ohne deine Liebe, was wär' ich ohne dich,
@@ -5403,7 +5444,7 @@ Ich war doch auf der rechten Spur:
 denn, hatte ich die Wahl,
 nur dich erwählt' ich mir:
 du warest mein Gemahl.
-Den Preis reicht' ich nur dir! -
+Den Preis reicht' ich nur dir!
 Doch nun hat's mich gewählt
 zu nie gekannter Qual:
 und werd' ich heut' vermählt,
@@ -5417,13 +5458,17 @@ kenn' ich ein traurig Stück:
 Hans Sachs war klug und wollte
 nichts von Herrn Markes Glück.
 's war Zeit, dass ich den Rechten fand,
-wär' sonst am End' doch hineingerannt. -
+wär' sonst am End' doch hineingerannt.
 Aha! Da streicht die Lene schon ums Haus:
-Nur herein! - He, David! Kommst nicht heraus?
-Magdalene, in festlichem Staate, tritt durch die Ladentür herein; David ebenfalls im Festkleid, mit Blumen und Bändern sehr reich und zierlich aufgeputzt, kommt zugleich aus der Kammer
+Nur herein! He, David! Kommst nicht heraus?
+
+\direct{\Magdalene, in festlichem Staate, tritt durch die Ladentür herein; David ebenfalls im Festkleid, mit Blumen und Bändern sehr reich und zierlich aufgeputzt, kommt zugleich aus der Kammer}
+
 Die Zeugen sind da, Gevatter zur Hand;
 jetzt schnell zur Taufe, nehmt euren Stand.
-Alle blicken ihn verwundert an
+
+\direct{Alle blicken ihn verwundert an}
+
 Ein Kind ward hier geboren;
 jetzt sei ihm ein Nam' erkoren!
 So ist's nach Meisterweis' und Art,
@@ -5444,19 +5489,22 @@ Doch da's zum Zeugen kein Lehrbube tut
 und heut' auch den Spruch er gesungen gut,
 so mach' ich den Burschen gleich zum Gesell;
 knie nieder, David, und nimm diese Schell'!
-David ist niedergekniet: Sachs gibt ihm eine starke Ohrfeige
+
+\direct{\David ist niedergekniet: \Sachs gibt ihm eine starke Ohrfeige}
+
 Steh' auf, Gesell', und denk' an den Streich;
-du merkst dir dabei die Taufe zugleich! -
+du merkst dir dabei die Taufe zugleich!
 Fehlt sonst noch was, uns keiner schilt:
 wer weiss, ob's nicht gar einer Nottaufe gilt.
 Dass die Weise Kraft behalte zum Leben,
 will ich nur gleich den Namen ihr geben:
-"Die selige Morgentraumdeut-Weise«
+%% START HERE: KNAPPERTSBUSCH CD4
+``Die selige Morgentraumdeut-Weise''
 sei sie genannt zu des Meisters Preise.
 Nun wachse sie gross, ohn' Schad' und Bruch.
 Die jüngste Gevatterin spricht den Spruch.
 
-Er tritt aus der Mitte des Halbkreises, der von den übrigen um ihn gebildet war, auf die Seite, so dass nun Eva in die Mitte zu stehen kommt
+\direct{Er tritt aus der Mitte des Halbkreises, der von den übrigen um ihn gebildet war, auf die Seite, so dass nun Eva in die Mitte zu stehen kommt}
 
 \Evaspeaks
 Selig, wie die Sonne
